--- a/Extension/style.css
+++ b/Extension/style.css
@@ -1,3 +1,9 @@
-.ext_highlight {
-border:1px solid black;
+#dialog {
+	position:absolute;
+	top:0;
+	width:20%;
+	height:50%;
+	margin-left:auto;
+	margin-right:auto;
+	background-color:white;
 }
