Search term being displayed, image CSS is a bit funked

--- a/Extension/results/css/style.css
+++ b/Extension/results/css/style.css
@@ -4,8 +4,8 @@
 
 .item img {
     max-width: 200px !important;
-    float: left;
-    margin: 20px;
 }
 
-.header { border-bottom: 1pt solid black; }
+.header {
+    border-bottom: 1pt solid black;
+}
